# Programming-Principles

LAB1/: CMakeLists.txt  main.cpp
LAB2/: CMakeLists.txt  main.cpp
LAB3/: main.cpp
LAB4/: CMakeLists.txt  main.cpp
LAB5/: main.cpp
LAB6/: main.cpp
LAB7/: CMakeLists.txt  main.cpp
LAB8/: CMakeLists.txt  main.cpp
LAB9/: CMakeLists.txt  main.cpp
extraLAB/: CMakeLists.txt  main.cpp
xmasTree/: CMakeLists.txt  main.cpp
